validate products section when assigned to user/company (#147)
CPCN-444
